--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.3",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@tinymce/tinymce-angular": "^7.0.0",
+    "ngx-infinite-scroll": "^15.0.0",
     "rxjs": "~7.8.0",
+    "tinymce": "^6.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
